@@ -17,6 +17,8 @@
  - fixed bug in comment notification (lupin/goffy)
  - added new permission to use album collections (lupin/goffy)
  - removed user select of album creator on user side (lupin/goffy)
+ - fixed bug in read exif non utf8 (lupin/goffy)
+ - fixed perm for album list in image editor (lupin/goffy)
 
 <h5>1.14 RC1</h5>  [2019/11/09]
 <hr>
